# Gravity-Simulator-Cpp

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  setup.bat  setup.sh  vcpkg-configuration.json  vcpkg.json
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.h  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/tests/: Test.h  TestCircle2D.cpp  TestCircle2D.h  TestClearColor.cpp  TestClearColor.h  TestMenu.cpp  TestTexture2D.cpp  TestTexture2D.h
src/tests/objects/: OCircle.cpp  OCircle.h  Object.cpp  Object.h  obj.cpp  obj.h  objCircle.cpp  objCircle.h
